2006-10-22  Richard Sandiford  <richard@codesourcery.com>

	* config/mips/mips.c (mips_split_const): Don't accept bare PLUS
	expressions.

2006-10-21  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md (UNSPEC_LDQQU): Renamed to ...
	(UNSPEC_LDDQU): This.
	* config/i386/sse.md (sse3_lddqu): Updated.

2006-10-21  Richard Guenther  <rguenther@suse.de>

	* builtins.c (expand_builtin_int_roundingfn_2): New function.
	(expand_builtin): Use it to expand lrint instead of
	expand_builtin_mathfn.

2006-10-21  Uros Bizjak  <uros@kss-loka.si>

	PR middle-end/28252
	* builtins.c (fold_builtin): Fold pow(x,1.0/3.0) as cbrt(x) if
	flag_unsafe_math_optimizations is set.

2006-10-21  Uros Bizjak  <uros@kss-loka.si>

	PR target/19398
	* config/i386/i386.md (fix_trunc?f?i_sse): Add peephole2
	patterns to use memory input operand in x87->mem->XMM
	reload sequences.  Skip transformation for TARGET_K8.

2006-10-21  Uros Bizjak  <uros@kss-loka.si>

	* config/i386/i386.md (extendsfdf2, extendsfxf2, extenddfxf2): Do not
	force operand1 to register if both operands are memory operands.
	(*extendsfdf2_mixed, *extendsfdf2_sse, *extendsfdf2_i387)
	(*extendsfxf2_i387, *extenddfxf2_i387): Do not disable pattern
	if both operands are memory operands.
	(truncdfsf2): Do not force operand1 to register if both operands
	are memory operands.

2006-10-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (LIBS): Add $(GMPLIBS).
	* doc/install.texi: Update GMP and MPFR requirements.
	* doc/sourcebuild.texi (need_gmp): Delete.

2006-10-21  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/3511
	* tree-ssa-pre.c (phi_translate): Fold CALL_EXPRs that
	got new invariant arguments during PHI translation.

2006-10-21  Richard Guenther  <rguenther@suse.de>

	PR middle-end/26898
	* fold-const.c (fold_comparison): Fold signed comparisons
	of the form X +- C1 CMP Y +- C2.

2006-10-21  Richard Guenther  <rguenther@suse.de>

	PR target/19116